# SoundVerse

./: .claudeignore  .gitignore  BUTLER_STATE.json  CLAUDE.md  HISTORY.md  PROGRESS.md  PROGRESS.md.backup  PROJECT_CHECK_REPORT.md  PROJECT_FINAL_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  README_CHECK_最简版.md  README_CHECK_简版.md  TASKS.md  TASK_REPORT.json  docker-compose.yml  full_stack_fix_temp.md  task.txt  检查报告-极简版.md  检查报告-简版.md  检查报告-超简版.md  项目健康检查报告.md  项目检查报告-最终版-最简版.md  项目检查报告-最终版-精简版.md  项目检查报告-最终版-详细版.md  项目检查报告-最终版.md  项目检查报告-简洁版.md  项目状态报告_20260312.md
.claude/: settings.local.json
Audit_Report/: Audit_20260327_215914_R1.md  Audit_20260401_071753_R1.md  Audit_20260401_071830_R2.md  Audit_20260401_071858_R3.md  Audit_20260401_0719_R4.md  Audit_20260401_072311_R4.md  CODE_QUALITY_AUDIT_REPORT.md  FULL_QUALITY_CHECK_ROUND1.md  HEALING_ROUND1_REPORT.md
admin/: BUTLER_STATE.json  Dockerfile  PROGRESS.md  TASK_REPORT.json  nginx.conf  package.json  vite.config.ts
admin/src/: App.tsx
archive/admin/: package-lock.json
archive/wechat-miniprogram/: ENVIRONMENT.md  app.json  app.ts  app.wxss  config.js  package-lock.json  package.json  project.private.config.json  tsconfig.json
backend/: .env.example  =1.0.0  Dockerfile.dev  PROGRESS.md  README.md  celery_app.py  check_audio_urls.py  check_dashvector.py  check_keys.py  check_segments.py  check_vector_status.py  clean_database.py  config.py  docker-compose.yml  main.py  pyproject.toml  query_segments.py  report_results.py  reset_database.py  tasks.py  truncate_tables.py
backend/.claude/: settings.local.json
backend/ai_models/: asr_service.py  llm_service.py  nlp_service.py
backend/api/v1/: __init__.py  audio.py  auth.py  chat.py  generate.py
backend/backend/docker/nginx/: nginx.conf
backend/data/: faiss_index.pkl
backend/docker/mysql/: init.sql
backend/docker/prometheus/: prometheus.yml
backend/docs/: PROGRESS_ARCHIVE.md
backend/scripts/: approve_test_segments.py  audio_transcription_encoding_report.md  audit_db.py  audit_vectors.py  check_collection_metric.py  check_config.py  check_dashvector.py  check_encoding.py  check_integrity.py  check_segments.py  check_vector_normalization.py  clean_all_data.py  clean_and_repopulate.py  cleanup_stalled.py  clear_database.py  count_vectors.py  create_collection.py  diagnose_dashvector.py  extract_natural_phrases.py  final_diagnosis.py  final_validation.py  generate_effective_prompts.py  get_prompts_v2.py  get_test_prompts_simple.py  get_top_prompts.py  init_db.sh  insert_test_audio.py  mass_ingest.py  new_key_success.json  populate_vector_index.py  print_segments.py  process_full_pipeline.py  refine_segments.py  reset_dashvector.py  simple_sync_to_dashvector.py  simple_vector_check.py  start_dev.sh  stat.py  sync_dashvector.py  sync_to_dashvector.py  (+6 more)
backend/services/: audio_generation_service.py  audio_processing_service.py  audio_service.py  chat_service.py  conversational_prompt_service.py  natural_conversational_phrases.py  prompt_generation_service.py  search_service.py  storage_service.py  user_service.py
backend/shared/database/: session.py
backend/shared/models/: audio.py  chat.py  user.py
backend/shared/schemas/: audio.py  chat.py  user.py
backend/shared/utils/: logging.py
frontend-demo/: Dockerfile  index.html  package-lock.json
frontend-demo/src/: App.tsx  (+1 more)
memory/: conversational_phrases_optimization_20260316.md
wechat-miniprogram/: app.js  app.json  app.ts  app.wxss  config.js  config.ts  project.config.json  project.private.config.json
(+75 files in other folders)
