[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundverse-backend"
version = "0.1.0"
description = "听听·原声态后端服务"
authors = [
    {name = "SoundVerse Team", email = "team@soundverse.example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # "asyncmy>=0.2.0",  # Requires C++ build tools on Windows, using aiomysql instead
    "aiomysql>=0.3.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "aioredis>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "pydub>=0.25.1",
    # "librosa>=0.10.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",
    "aliyun-python-sdk-core>=2.16.0",
    "alibabacloud-nls-python-sdk",
    "oss2>=2.18.0",
    "dashscope>=1.14.0",
    "dashvector>=0.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
]

[project.urls]
Homepage = "https://github.com/soundverse/soundverse-backend"
Repository = "https://github.com/soundverse/soundverse-backend.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "ai-models*"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused import

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    # "librosa.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
    "slow: slow tests",
    "ai: tests requiring AI services",
]

[project.scripts]
soundverse-api = "main:main"